# auratimer

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
assets/: icon.icns  main.css  tailwind.css
src/: main.rs  sound.rs  state.rs  tray.rs  window.rs
src/components/: alert.rs  control_buttons.rs  icons.rs  info.rs  mod.rs  timer.rs  timer_expired.rs
src/tray/: mod.rs  tray.rs
src/ui/: button.rs  icon_button.rs  icons.rs  mod.rs  round_button.rs
