[package]
name = "AuraTimer"
version = "0.1.0"
authors = ["kyteidev <89528285+kyteidev@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
objc2 = "0.6.1"
rodio = "0.20.1"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tray-icon = "0.20.1"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
